[Command buffer] During blit framebuffer, It is invalid if src source and dst source have identical image

BUG=645490
TEST=conformance2/rendering/blitframebuffer-test.html
CQ_INCLUDE_TRYBOTS=master.tryserver.chromium.linux:linux_optional_gpu_tests_rel;master.tryserver.chromium.mac:mac_optional_gpu_tests_rel;master.tryserver.chromium.win:win_optional_gpu_tests_rel

Review-Url: https://codereview.chromium.org/2329453002
Cr-Commit-Position: refs/heads/master@{#417896}

Former-commit-id: faeb732edb9e057db922bc1d623dd0a543b91ca0