content/test/gpu/gpu_tests/webgl2_conformance_expectations.py
@@ -42,7 +42,6 @@ class WebGL2ConformanceExpectations(WebGLConformanceExpectations):
     self.Fail('conformance2/rendering/blitframebuffer-outside-readbuffer.html',
         bug=664740)
     self.Flaky('conformance2/query/occlusion-query.html', bug=603168)
-    self.Fail('conformance2/rendering/blitframebuffer-test.html', bug=634525)
     self.Fail('conformance2/buffers/uniform-buffers.html', bug=644957)
     self.Fail('conformance2/state/gl-object-get-calls.html', bug=644957)
 
